# liaison

./: README.md  pyproject.toml
liaison/: base.py
liaison/companion/: command.schema.json  companion.py
liaison/websocket/: websocket.py
